# gmm_obs_pendulum

./: CMakeLists.txt  README.md  ReasdME.txt  package.xml
config/: torque_control.yaml
dynamics/: pendulum_dynamics.nb
include/gmm_obs/: ContactPlugin.hh
launch/: robot_torque_control.launch  robot_world.launch  torque_control.launch
sdf/: pendulum.sdf
src/: .observer.py.swp  ContactPlugin.cpp  observer.py  torque_controller.py
urdf/: pendulum.gazebo  pendulum.urdf  pendulum.xacro
worlds/: pendulum.world
