<?xml version="1.0"?>
<package format="2">
  <name>gmm_obs</name>
  <version>0.0.0</version>
  <description>The gmm_obs package</description>
  <maintainer email="meghna@todo.todo">meghna</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend> 
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>

  </export>
</package>
